storage/connect/ha_connect.h
@@ -347,11 +347,7 @@ PFIL  CondFilter(PGLOBAL g, Item *cond);
 //PFIL  CheckFilter(PGLOBAL g);
 
 /** admin commands - called from mysql_admin_table */
-virtual int check(THD* thd, HA_CHECK_OPT* check_opt)
-{
-	// TODO: implement it
-	return HA_ADMIN_OK;	// Just to avoid error message with checktables
-}	// end of check
+virtual int check(THD* thd, HA_CHECK_OPT* check_opt);
 
  /**
    Number of rows in table. It will only be called if
